# dhall-terraform

./: .gitignore  .gitpod.yml  CHANGELOG.md  Makefile  README.md  build.nix  default.nix  dhall-terraform.cabal  dtf  flake.nix  hie.yaml  shell.darwin-amd64.nix  shell.darwin-arm64.nix  shell.linux-amd64.nix  shell.linux-arm64.nix  shell.nix
.github/workflows/: build.yml  test.yml
app/: Main.hs
examples/aws/: main.dhall
examples/azure/: main.dhall
examples/utils/: utils.dhall
lib/registry.terraform.io/aliyun/alicloud/data_sources/: alicloud_ack_service.dhall  alicloud_actiontrail_trails.dhall  alicloud_adb_db_clusters.dhall  alicloud_alidns_domain_groups.dhall  alicloud_alidns_records.dhall  alicloud_alikafka_consumer_groups.dhall  alicloud_alikafka_instances.dhall  alicloud_alikafka_sasl_acls.dhall  alicloud_alikafka_sasl_users.dhall  alicloud_alikafka_topics.dhall  alicloud_api_gateway_apis.dhall  alicloud_api_gateway_apps.dhall  alicloud_api_gateway_groups.dhall  alicloud_brain_industrial_pid_loops.dhall  alicloud_brain_industrial_pid_organizations.dhall  alicloud_brain_industrial_pid_projects.dhall  alicloud_caller_identity.dhall  alicloud_cas_certificates.dhall  alicloud_cassandra_clusters.dhall  alicloud_cassandra_data_centers.dhall  alicloud_cdn_service.dhall  alicloud_cen_bandwidth_limits.dhall  alicloud_cen_bandwidth_packages.dhall  alicloud_cen_flowlogs.dhall  alicloud_cen_instance_attachments.dhall  alicloud_cen_instances.dhall  alicloud_cen_private_zones.dhall  alicloud_cen_region_route_entries.dhall  alicloud_cen_route_entries.dhall  alicloud_cen_route_maps.dhall  alicloud_cen_route_services.dhall  alicloud_cen_vbr_health_checks.dhall  alicloud_cloud_connect_networks.dhall  alicloud_cloud_storage_gateway_storage_bundles.dhall  alicloud_cms_alarm_contact_groups.dhall  alicloud_cms_alarm_contacts.dhall  alicloud_cms_group_metric_rules.dhall  alicloud_cms_monitor_group_instanceses.dhall  alicloud_cms_monitor_groups.dhall  alicloud_common_bandwidth_packages.dhall  (+203 more)
lib/registry.terraform.io/aliyun/alicloud/provider/: provider.dhall
lib/registry.terraform.io/aliyun/alicloud/resources/: alicloud_actiontrail_trail.dhall  alicloud_adb_account.dhall  alicloud_adb_backup_policy.dhall  alicloud_adb_cluster.dhall  alicloud_adb_connection.dhall  alicloud_alidns_domain.dhall  alicloud_alidns_domain_attachment.dhall  alicloud_alidns_domain_group.dhall  alicloud_cdn_domain.dhall  (+287 more)
src/Terraform/: Convert.hs  Types.hs
test-schemas/: .gitignore
test-schemas/cloudflare-cloudflare-4.9.0/: schema.json
test-schemas/cloudflare-cloudflare-5.2.0/: provider  schema.json
test-schemas/hashicorp-aws-5.94.1/: provider
test-schemas/hashicorp-azurerm-4.26.0/: provider
test-schemas/hashicorp-google-6.28.0/: provider
test-schemas/hashicorp-helm-2.17.0/: provider  schema.json
test-schemas/hashicorp-kubernetes-2.36.0/: provider
test-schemas/hashicorp-null-3.2.3/: provider  schema.json
test-schemas/hashicorp-random-3.7.1/: provider  schema.json
tf/aci/: main.tf  schema.json
tf/aws/: main.tf
tf/azurerm/: schema.json
tf/google/: main.tf  schema.json
tf/kubernetes/: schema.json
tf/oci/: main.tf  schema.json
utils/: build.sh  clean-tests.sh  common.sh  prep-release.sh  run-tests.sh  setup.sh  test-schema.sh
utils/in-shell/: build.sh
(+2145 files in other folders)
