cabal-version:       2.0
name:                dhall-terraform
version:             0.4.0
synopsis:            Creates Terraform resources using Dhall
description:         Generate Dhall types for an arbitrary Terraform provider using the provider schema.
license:             MIT
license-file:        LICENSE
author:              Evan Mattiza
maintainer:          evan@mattiza.dev
copyright:           2021 Evan Mattiza
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.10.4

library
  hs-source-dirs:      src
  exposed-modules:     Terraform.Types
                     , Terraform.Convert


  build-depends:       base
                     , aeson
                     , aeson-casing
                     , text
                     , containers
                     , split
                     , dhall
                     , turtle
                     , vector

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -optl-static

  default-language:    Haskell2010

executable dhall-terraform-libgen
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_dhall_terraform

  build-depends:       base
                     , async
                     , dhall-terraform
                     , optparse-applicative
                     , bytestring
                     , aeson
                     , dhall
                     , prettyprinter
                     , containers
                     , text
                     , turtle

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -optl-static

  default-language:    Haskell2010

test-suite dhall-terraform-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base
                     , dhall-terraform


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
